# duckdb-extensions-analysis

./: .gitignore  ANALYTICS.md  CONTRIBUTING.md  GITHUB_ACTION.md  HARDCODED_AUDIT.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  TODO.md  WARP.md  WHATS_NEW.md  backlog.md  duck_sources.md  gh_pages_url.md  great-docs.yml  justfile  linkedin_comment_options.md  main.py  post.md  pyproject.toml  pytest.ini  test_url_validation_fix.py  todo-llm-gd.md  tool-post.md
.github/: README-pages.md
_site/: index.html
blog/: DATABOOTH_BLOG_POST.md  databooth_blog_background.md  post.md  post1_navigating_extension_updates.md  post1_navigating_extension_updates_LIVE.md  post2_ecosystem_analysis_tool.md  post2_ecosystem_analysis_tool_LIVE.md
conf/: config.py  config.toml  extensions_metadata.toml
deprecated/: analyze_extensions_legacy.py  simple_content_validation_test.py  simple_url_test.py  test_enhanced_url_validation.py
docs/: DATA_QUALITY_LIMITATIONS.md  DISCORD_ANNOUNCEMENT.md  DISCORD_ANNOUNCEMENT_SHORT.md  HISTORICAL_PRE_1_0_RELEASES.md  IMPLEMENTATION_PLAN.md  LINKEDIN_THIRD_PARTY_FOLLOW_ON_PLUG.md  PERFORMANCE_NOTES.md  SQL_QUERIES.md  THIRD_PARTY_EXTENSIONS_SUBMISSIONS.md  THIRD_PARTY_WORKFLOW.md  historical_tracking.md  llms-full.txt  llms.txt  project_summary.md
labels/: third_party_extension_labels.csv
reports/: HISTORICAL_UI_EXTENSION_PROOF.md  UI_EXTENSION_TIMELINE_ANALYSIS.md  compatibility_testing.md  corrected_historical_report_v140_20240916.md  current_report_with_ui_extension_20250922.csv  deprecated_extensions_analysis.json  deprecated_extensions_analysis.md  deprecated_extensions_analysis_cached.json  deprecation_analysis_summary.md  duckdb_extensions_report_20250919_111714.csv  duckdb_extensions_report_20250919_111715.xlsx  duckdb_extensions_report_20250922_113025.md  duckdb_extensions_report_20250922_113025.xlsx  latest.md  (+6 more)
(+137 files in other folders)
