[project]
name = "duckdb-extensions-analysis"
version = "0.1.3"
description = "Comprehensive analysis tool for DuckDB extensions with historical tracking and multiple output formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "diskcache>=5.6.3",
    "duckdb>=1.1.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]
